[package]
name = "lolprobe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-io = "2.4.0"
bitfield = "0.17.0"
bitvec = "1.0.1"
docsplay = "0.1.1"
futures-lite = "2.5.0"
hidapi = "2.6.3"
nusb = "0.1.12"
scroll = "0.12.0"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
